--- a/public/index.html
+++ b/public/index.html
@@ -6,5 +6,8 @@
   </head>
   <body>
     <h1>Cyka Blyat</h1>
+    <video autoplay poster="media/posterimage.png" controls width="100%">
+      <source src="media/movie.mov" type="video/mp4">
+    </video>
   </body>
 </html>
