add animate and bg

--- a/public/index.html
+++ b/public/index.html
@@ -72,14 +72,26 @@
     <section class="cd-section">
         <div class="cd-block">
             <div class="cd-half-block">
+                <div class="icon">
+                    <i class="fa fa-retweet"></i>
+                </div>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores eos labore ratione illum excepturi neque sunt blanditiis ducimus soluta quae!
+                    Concernant vos 200 derniers tweets,
+                    Vous avez un total de <span id="totalRT"></span> retweets.<br>
+                    Soit une moyenne de <span id="averageRT"></span>.<br>
+                    Dont <span id="noRT"></span> tweet(s) qui n'ont aucun retweet.
                 </p>
             </div>
 
             <div class="cd-half-block">
+                <div class="icon">
+                    <i class="fa fa-heart"></i>
+                </div>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores eos labore ratione illum excepturi neque sunt blanditiis ducimus soluta quae!
+                    Concernant vos 200 derniers tweets,
+                    Vous avez un total de <span id="totalFav"></span> favoris.<br>
+                    Soit une moyenne de <span id="averageFav"></span>.<br>
+                    Dont <span id="noFav"></span> tweet(s) qui n'ont aucun favori.
                 </p>
             </div>
         </div>
