--- a/public/index.html
+++ b/public/index.html
@@ -102,21 +102,28 @@
             <div class="cd-half-block"></div>
 
             <div class="cd-half-block">
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores eos labore ratione illum excepturi neque sunt blanditiis ducimus soluta quae!
-                </p>
+                <div class="icon">
+                    <i class="fa fa-area-chart"></i>
+                </div>
+                <div id="chartContainer" class="valign"></div>
             </div>
         </div>
     </section> <!-- .cd-section -->
 
     <section class="cd-section">
         <div class="cd-block">
-            <div class="cd-half-block"></div>
+            <div class="cd-half-block">
+                <div class="icon">
+                    <i class="fa fa-sun-o"></i>
+                </div>
+                <h2>9:40</h2>
+            </div>
 
             <div class="cd-half-block">
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores eos labore ratione illum excepturi neque sunt blanditiis ducimus soluta quae!
-                </p>
+                <div class="icon">
+                    <i class="fa fa-moon-o"></i>
+                </div>
+                <h2 class="light">16:12</h2>
             </div>
         </div>
     </section> <!-- .cd-section -->
@@ -127,6 +134,7 @@
             <li><a href="#0" class="cd-next">Prev</a></li>
         </ul>
     </nav> <!-- .cd-vertical-nav -->
+<script src="javascripts/canvasjs.min.js"></script>
 <script src="javascripts/jquery-2.1.1.js"></script>
 <script src="javascripts/main.js"></script> <!-- Resource jQuery -->
 </body>
