--- a/public/index.html
+++ b/public/index.html
@@ -76,7 +76,7 @@
                     <i class="fa fa-retweet"></i>
                 </div>
                 <p>
-                    Concernant vos 200 derniers tweets,
+                    Concernant vos <span class="tLength"></span> derniers tweets,
                     Vous avez un total de <span id="totalRT"></span> retweets.<br>
                     Soit une moyenne de <span id="averageRT"></span>.<br>
                     Dont <span id="noRT"></span> tweet(s) qui n'ont aucun retweet.
@@ -88,7 +88,7 @@
                     <i class="fa fa-heart"></i>
                 </div>
                 <p>
-                    Concernant vos 200 derniers tweets,
+                    Concernant vos <span class="tLength"></span> derniers tweets,
                     Vous avez un total de <span id="totalFav"></span> favoris.<br>
                     Soit une moyenne de <span id="averageFav"></span>.<br>
                     Dont <span id="noFav"></span> tweet(s) qui n'ont aucun favori.
