set result front

--- a/public/index.html
+++ b/public/index.html
@@ -116,14 +116,14 @@
                 <div class="icon">
                     <i class="fa fa-sun-o"></i>
                 </div>
-                <h2>9:40</h2>
+                <h2 id="morning"></h2>
             </div>
 
             <div class="cd-half-block">
                 <div class="icon">
                     <i class="fa fa-moon-o"></i>
                 </div>
-                <h2 class="light">16:12</h2>
+                <h2 id="afternoon" class="light"></h2>
             </div>
         </div>
     </section> <!-- .cd-section -->
