--- a/public/index.html
+++ b/public/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
+    <link rel="icon" href="img/favicon.ico">
     <link href='http://fonts.googleapis.com/css?family=Slabo+27px' rel='stylesheet' type='text/css'>
 
     <link rel="stylesheet" href="stylesheets/style.css"> <!-- Resource style -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <script src="javascripts/modernizr.js"></script> <!-- Modernizr -->
     
-    <title></title>
+    <title>Optimal Time to Tweet</title>
 </head>
 <body>
     <div id="profil" class="hidden">
